# iceberg-rust

./: .gitignore  Cargo.toml
datafusion-iceberg-sql/src/: context.rs
datafusion_iceberg/: Cargo.toml
datafusion_iceberg/examples/: dataframe.rs
datafusion_iceberg/src/: error.rs  lib.rs  logicalextensioncodec.rs  materialized_view.rs  statistics.rs  table.rs
datafusion_iceberg/src/catalog/: mirror.rs  schema.rs
iceberg-glue-catalog/: Cargo.toml
iceberg-glue-catalog/src/: lib.rs  schema.rs  utils.rs
iceberg-rest-catalog/src/: catalog.rs
iceberg-rust/: Cargo.toml
iceberg-rust-spec/: Cargo.toml
iceberg-rust-spec/src/: error.rs
iceberg-rust-spec/src/arrow/: schema.rs
iceberg-rust-spec/src/spec/: manifest.rs  manifest_list.rs  materialized_view_metadata.rs  snapshot.rs  table_metadata.rs  types.rs
iceberg-rust/src/: lib.rs
iceberg-rust/src/arrow/: read.rs
iceberg-rust/src/catalog/: create.rs  identifier.rs  mod.rs  namespace.rs  tabular.rs
iceberg-rust/src/io/: object_store.rs
iceberg-rust/src/materialized_view/: materialized_view_builder.rs  mod.rs
iceberg-rust/src/materialized_view/transaction/: mod.rs
iceberg-rust/src/table/: mod.rs  pruning_statistics.rs  table_builder.rs
iceberg-rust/src/table/transaction/: mod.rs  operation.rs
iceberg-rust/src/view/: mod.rs  view_builder.rs
iceberg-sql-catalog/src/: lib.rs
iceberg-tests/nyc_taxis/home/iceberg/warehouse/nyc/taxis/metadata/: 0-092ffb7e-6e8d-4918-a90a-15967173a224.metadata.json  0-0aa7d1bc-e1ff-4da3-99a0-408ddc5d10c9.metadata.json  0-1848cf3f-557d-4550-8676-4fdcf5809673.metadata.json  0-1db86204-663e-4d53-817d-b9b640918a55.metadata.json  0-1e030abc-c586-4616-ad5f-7543a56879ef.metadata.json  0-204c7fe1-a427-4653-9427-f48cda87ef1d.metadata.json  0-22be42ed-41e6-43cc-8994-68745c7009fe.metadata.json  0-28d6ee2f-aa80-473e-a6b3-b6629d527d60.metadata.json  0-2d824fc6-64eb-4381-9159-2264831312e5.metadata.json  0-2f70a9af-b05c-4d6d-904f-a978600c7738.metadata.json  0-5ac9f5ba-140e-4fb8-8202-c067617e7ed1.metadata.json  0-5f004220-b372-48ca-899e-2f4a9ea45603.metadata.json  0-64919648-733e-4669-980c-a213b3ef189e.metadata.json  0-65109805-2e42-4247-b0f4-d2b9141e9245.metadata.json  0-65bf979b-5190-4a63-8a96-79e22a05926c.metadata.json  0-67f6ff3e-fb1e-407e-b00b-3c4fc29d11a5.metadata.json  0-6b63d7bf-7c10-46e6-a8fd-7734040c8ee4.metadata.json  0-6bedcb34-1242-4d34-a76b-4a05aff13f31.metadata.json  0-7c3dbfd5-0d0e-4018-9058-5eef1567873a.metadata.json  0-8257f706-9f04-4c8c-ae4f-a3d1efbdda25.metadata.json  0-82f871bd-5dc7-4487-95e9-a380a7070854.metadata.json  0-943c1666-7139-4774-89d9-68b67f44b692.metadata.json  0-ab389ed8-096b-4b36-962a-9f95096553ec.metadata.json  0-cae4bb25-3519-45f7-a6c6-edbe267d78a9.metadata.json
scratch-bin-files/: Cargo.toml
scratch-bin-files/src/: main.rs
