[workspace]
members = [
  "scratch-bin-files",
  "iceberg-rust-spec",
  "iceberg-rust",
  "datafusion_iceberg",
  "datafusion-iceberg-sql",
  "iceberg-sql-catalog"
, "iceberg-glue-catalog"]

resolver = "2"

[workspace.dependencies]
object_store = { version = "0.9", features = ["aws", "gcp"] }
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
futures = "0.3.30"
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["serde"] }
arrow = "51.0.0"
arrow-schema = "51.0.0"
datafusion = {git = "https://github.com/dhruvils414/query-rust", branch = "ballista_setup"}
datafusion-sql =  {git = "https://github.com/dhruvils414/query-rust", branch = "ballista_setup"}
datafusion-expr =  {git = "https://github.com/dhruvils414/query-rust", branch = "ballista_setup"}
datafusion-common =  {git = "https://github.com/dhruvils414/query-rust", branch = "ballista_setup"}
datafusion-proto =  {git = "https://github.com/dhruvils414/query-rust", branch = "ballista_setup"}
parquet = { version = "51.0.0", features = ["async", "object_store"] }
sqlparser = { version = "0.45.0", features = ["visitor"] }
thiserror = "1.0"
url = "^2.2"
uuid = { version = "1.3.2", features = ["serde", "v4"] }
itertools = "0.10.5"
derive-getters = "0.3.0"
tracing = "0.1"
tracing-futures = "0.2"

