[package]
name = "scratch-bin-files"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"iceberg-rust-spec" = { path = "../iceberg-rust-spec" }
"iceberg-rust" = { path = "../iceberg-rust" }
"datafusion_iceberg" = { path = "../datafusion_iceberg" }
"datafusion-iceberg-sql" = { path = "../datafusion-iceberg-sql" }
"iceberg-sql-catalog" = { path = "../iceberg-sql-catalog" }
"object_store" = { version = "0.9", features = ["aws", "gcp"] }
tokio = "1.36.0"
datafusion = { git = "https://github.com/dhruvils414/query-rust", branch = "ballista_setup"}
